@@ -1,6 +1,7 @@
 v1.022 - Fix bug where files were considered identical if they differed
          in the first cell of corresponding rows (but was a missing 'defined'
          in 'if first{cell[$_] differs} 0..maxcx').
+         Rework diff argument pass-thru logic; update shared test libraries.
 v1.021 - Addressed Windows issue. Now using Path::Tiny
 v1.020 - Tweak --help test to not fail with cp850
 v1.019 - Update used module version dependencies
